--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <h1>Connect Your Content</h1>
         <p>Bring all of your content together and get a Homepage that <br>
             automatically updates whenever you create anywhere online.</p>
-            <button>View Avaliable Sources</button>
+        <button>View Avaliable Sources</button>
     </section>
     <section class="content2">
         <div class="contentLeft">
@@ -94,9 +94,82 @@
             <img src="./images/Image.png" alt="">
         </div>
     </section>
-    <section>
-        
+    <section class="section2">
+        <a href="">STEP 2</a>
+        <h1>Share Your Homepage</h1>
+        <p>Share your Wavium homepage link with your followers, and <br>
+            we'll handle the rest.</p>
+        <div class="section2df">
+            <div class="section2Left">
+                <span>One Link</span>
+                <ul>
+                    <h5>ALL You Create.</h5> One Link
+                </ul>
+                <img src="./images/Mobile_body.png" alt="">
+            </div>
+            <div class="section2Right">
+                <span>Collect Subscribers</span>
+                <ul>
+                    <h5>Emails. <br>Phone #s.</h5> All Yours.
+                </ul>
+            </div>
+        </div>
+        <button class="btn1">Get Started</button>
     </section>
+    <section class="section3">
+        <a href="">STEP 3</a>
+        <h2>Send Emails & Text Messages</h2>
+        <ul>No more going through a social platform. Reach and engage <br>
+            your audience directly over email and text massage.</ul>
+        <div class="content2">
+            <div class="contentLeft">
+                <p>Create & Share</p>
+                <h1>Reach Your <br>
+                    Audience <span>Directly. </span></h1>
+                <li> <span>1</span> Embed content or create something new to share.</li>
+                <li> <span>2</span> Share content over email, text message or your homepage.</li>
+                <div class="contentLeftButtons">
+                    <button class="btn1">Get Started Now</button>
+                    <button class="btn2">View A Demo</button>
+                </div>
+            </div>
+            <div class="contentRight">
+                <div class="contentLeftShape"></div>
+                <img src="./images/Image (1).png" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="section4">
+        <h1>Experts Agree</h1>
+        <img src="./images/Image (2).png" alt="">
+    </section>
+    <div class="section5">
+        <h1>We've helped over 1,000 creatorsre <br>
+            claim control of their audience.</h1>
+    </div>
+    <section class="section6">
+        <img src="./images/Logo.png" alt="">
+        <h1>Get Started Now</h1>
+        <p>Setup is easy and takes under 5 minutes.</p>
+        <button class="btn1">Get Started Now</button>
+        <div class="headerText">
+            <img src="./images/Dot.png" alt="">
+            <strong>1000+</strong>
+            <span>creators have already started</span>
+        </div>
+    </section>
+    <footer>
+        <div class="footerLeft">
+            <img src="./images/Company_logo.png" alt="">
+            <p>info@marico.co</p>
+        </div>
+        <div class="footerRight">
+            <a href="#">About</a>
+            <a href="#">Pricing</a>
+            <a href="#">Blog</a>
+            <a href="#">Sign in</a>
+        </div>
+    </footer>
 </body>
 
 </html>
